refactor: upgrade to jdk17 from jdk8